[gd_scene load_steps=9 format=3 uid="uid://cxtto0t64w1nr"]

[ext_resource type="Script" uid="uid://b4433purhoief" path="res://scripts/game.gd" id="1_fc0e3"]
[ext_resource type="PackedScene" uid="uid://dmq6nvcat2li" path="res://scenes/level_1.tscn" id="2_7jktm"]
[ext_resource type="PackedScene" uid="uid://dclgm7cgnsf30" path="res://scenes/player.tscn" id="3_feb5d"]
[ext_resource type="PackedScene" uid="uid://ciuide3jybsyu" path="res://scenes/level_3.tscn" id="4_ryrav"]
[ext_resource type="PackedScene" uid="uid://b7s4msybe76uy" path="res://scenes/level_2.tscn" id="5_7jktm"]
[ext_resource type="Script" uid="uid://dfruiga03ayob" path="res://scripts/cameraControl.gd" id="5_ryrav"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eow3j"]
size = Vector2(9, 32.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ryrav"]
size = Vector2(5, 32)

[node name="Game" type="Node2D"]
script = ExtResource("1_fc0e3")

[node name="Level1" parent="." instance=ExtResource("2_7jktm")]
position = Vector2(0, -1)

[node name="Level2" parent="." instance=ExtResource("5_7jktm")]
position = Vector2(1, 0)

[node name="Level3" parent="." instance=ExtResource("4_ryrav")]
position = Vector2(0, 3)

[node name="Player" parent="." instance=ExtResource("3_feb5d")]
z_index = 50

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(5, 5)
limit_left = 0
limit_top = 0
limit_right = 415
limit_bottom = 256
script = ExtResource("5_ryrav")

[node name="UI_Layer" type="CanvasLayer" parent="."]

[node name="TimerLabel" type="Label" parent="UI_Layer"]
offset_left = 179.0
offset_top = 4.0
offset_right = 225.0
offset_bottom = 27.0

[node name="Timer" type="Timer" parent="UI_Layer"]
autostart = true

[node name="Door_to_Level2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door_to_Level2"]
position = Vector2(416, 181.25)
shape = SubResource("RectangleShape2D_eow3j")

[node name="Door_to_Level3" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door_to_Level3"]
position = Vector2(0.5, 179)
shape = SubResource("RectangleShape2D_ryrav")

[connection signal="timeout" from="UI_Layer/Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Door_to_Level2" to="Player/Camera2D" method="_on_diningRoomDoor_body_entered"]
[connection signal="body_entered" from="Door_to_Level3" to="Player/Camera2D" method="_on_bedRoom_body_entered"]
